@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.917 2008-06-18 17:29:34 castaglia Exp $
+$Id: NEWS,v 1.918 2008-07-17 21:01:36 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -20,6 +20,7 @@ CVS
 - Bug 3083 - Multiple issues with handling of <Class> definitions.
 - Bug 3077 - Transparently handle the X-variant commands when checking
   <Limit> permissions.
+- Bug 3036 - Quota information not persisted if session ends abruptly.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
